cluster/apps/monitoring/prometheus-exporter/speedtest-net-exporter/speedtest-net-exporter-ingressroute.yaml
# speedtest-net-metrics-local-ingressroute

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: speedtest-net-metrics-local-ingressroute
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`speedtest-net.${SECRET_DOMAIN_LOCAL_02}`) && PathPrefix(`/metrics`)
      kind: Rule
      services:
        - name: speedtest-net-exporter
          port: 9090
